--- a/package.json
+++ b/package.json
@@ -26,9 +26,15 @@
     "@clr/angular": "^0.11.1",
     "@clr/icons": "^0.11.1",
     "@clr/ui": "^0.11.1",
+    "@ngrx/db": "^2.1.0",
+    "@ngrx/effects": "^4.1.1",
+    "@ngrx/router-store": "^4.1.1",
+    "@ngrx/store": "^4.1.1",
+    "@ngrx/store-devtools": "^4.1.1",
     "@webcomponents/custom-elements": "^1.0.0",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "ngrx-store-freeze": "^0.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
