--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@webcomponents/custom-elements": "^1.0.0",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "ng2-dnd": "^5.0.2",
     "ngrx-store-freeze": "^0.2.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
